--- a/deck.mdx
+++ b/deck.mdx
@@ -58,7 +58,27 @@ Refactoring [an eCommerce site](https://react-ecomm.netlify.com/).
 
 - the site is developed with React and Redux
 - we will refactor the React codes while learning
+- develop a [component docs site](https://react-ecomm-docs.netlify.com/) at the end.
 - I will not explain about the Redux code but it should not be relevant
+
+---
+
+### Links
+
+- Deck [(https://react-component-lib.netlify.com)](https://react-component-lib.netlify.com)
+- Code [(https://github.com/malcolm-kee/react-ecomm-site)](https://github.com/malcolm-kee/react-ecomm-site)
+  - switch to `start` branch
+
+---
+
+### Setting Up Code
+
+```bash
+git pull https://github.com/malcolm-kee/react-ecomm-site.git
+git checkout start
+npm install
+npm start
+```
 
 ---
 
