--- a/deck.mdx
+++ b/deck.mdx
@@ -74,7 +74,7 @@ Refactoring [an eCommerce site](https://react-ecomm.netlify.com/).
 ### Setting Up Code
 
 ```bash
-git pull https://github.com/malcolm-kee/react-ecomm-site.git
+git clone https://github.com/malcolm-kee/react-ecomm-site.git
 git checkout start
 npm install
 npm start
