upgrade mdx deck

--- a/deck.mdx
+++ b/deck.mdx
@@ -1,4 +1,4 @@
-import { Appear, Head } from 'mdx-deck';
+import { Head } from '@mdx-deck/components';
 import { Invert } from 'mdx-deck/layouts';
 
 <Head>
@@ -6,11 +6,13 @@ import { Invert } from 'mdx-deck/layouts';
   <meta name="author" content="Malcolm Kee Wee Siong" />
 </Head>
 
-export default Invert;
+<Invert>
 
 # React JS
 
 Creating Project Component Library
+
+</Invert>
 
 ---
 
@@ -82,9 +84,11 @@ npm start
 
 ---
 
-export default Invert;
+<Invert>
 
 ## Section 1: <br /> Creating Html Element Wrapper
+
+</Invert>
 
 ---
 
@@ -120,11 +124,13 @@ When creating a wrapper:
 
 ---
 
-export default Invert;
+<Invert>
 
 ## Section 2: <br />Creating Component wrapping components
 
-<Appear>(no, this is not higher-order component)</Appear>
+(no, this is not higher-order component)
+
+</Invert>
 
 ---
 
@@ -148,9 +154,11 @@ export default Invert;
 
 ---
 
-export default Invert;
+<Invert>
 
 ## Section 3: <br />Creating Stateful component
+
+</Invert>
 
 ---
 
@@ -169,11 +177,13 @@ export default Invert;
 
 ---
 
-export default Invert;
+<Invert>
 
 ## Section 4: <br />Creating Compound component
 
 Components that share implicit state
+
+</Invert>
 
 ---
 
@@ -183,14 +193,18 @@ associate label and input automatically
 
 ---
 
-export default Invert;
+<Invert>
 
 ## Section 5: <br />Creating Component Documentations
 
 Using `react-styleguidist`
 
+</Invert>
+
 ---
 
-export default Invert;
+<Invert>
 
 # More Questions?
+
+</Invert>
